--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,15 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "next",
-    "prettier"
-  ],
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true 
+  },
+  "extends": ["eslint:recommended", "next", "prettier"],
   "rules": {
     "semi": [2, "always"],
     "no-extra-semi": "warn",
     "no-undef": "error",
-    "quotes": ["warn", "single"] ,
-    "space-before-blocks": ["warn", { "functions": "always" }] 
+    "quotes": ["warn", "single"],
+    "space-before-blocks": ["warn", { "functions": "always" }]
   }
 }
