--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.4",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2"
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.15"
   }
 }
